# compressor

./: .gitignore  Cargo.toml
crc/: Cargo.toml
crc/src/: lib.rs  table.rs  utils.rs
feature_macros/: Cargo.toml  README.md  build.rs
feature_macros/src/: intrinsics.rs  lib.rs  numbers.rs  prefetch.rs
feature_macros/src/unstd/: borrow.rs  hash.rs  marker.rs  mem.rs  mod.rs  ops.rs  ptr.rs
fuzz/: Cargo.toml  fuzz_xxhash32_reference.rs  fuzz_xxhash32_stream.rs
xxhash/: Cargo.toml
xxhash/bench/: xxhash32.rs  xxhash64.rs
xxhash/bench/32/: local_32_reference.rs  local_32_streaming.rs  upstream_32_reference.rs
xxhash/bench/64/: local_64_reference.rs  local_64_streaming.rs  upstream_64_reference.rs
xxhash/src/: bits32.rs  bits64.rs  lib.rs
