[package]
name = "xxhash"
version = "0.1.0"
authors = ["William Laeder <codylaeder@gmail.com>"]
edition = "2015"


[dependencies]
feature_macros = { path = "../feature_macros", default_features = false }

[dev-dependencies]
twox-hash = { version = "=1.5.0", default_features = false }
getrandom = { version = "=0.1.14", default_features = false }
criterion = { version = "=0.3.1" }

[features]
default = ["std"]
std = ["feature_macros/std", "twox-hash/std", "getrandom/std"]
ub_unreachable = ["feature_macros/ub_unreachable"]
unbounded = ["feature_macros/unbounded"]
branch_hints = ["feature_macros/branch_hints"]
prefetch_hints = ["feature_macros/prefetch_hints"]


[[bench]]
name = "xxhash64_reference"
path = "bench/64/local_64_reference.rs"
harness = false

[[bench]]
name = "xxhash64_streaming"
path = "bench/64/local_64_streaming.rs"
harness = false

[[bench]]
name = "xxhash64_upstream"
path = "bench/64/upstream_64_reference.rs"
harness = false

[[bench]]
name = "xxhash32_reference"
path = "bench/32/local_32_reference.rs"
harness = false

[[bench]]
name = "xxhash32_streaming"
path = "bench/32/local_32_streaming.rs"
harness = false

[[bench]]
name = "xxhash32_upstream"
path = "bench/32/upstream_32_reference.rs"
harness = false


